// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader Component render 1`] = `
<div
  className="container"
  style={undefined}
>
  <div
    className="spinner"
  >
    <div
      className="bounce2"
      style={Object {}}
    />
    <div
      className="bounce3"
      style={Object {}}
    />
    <div
      className="bounce1"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`Loader Component sets dotColor as the dots background-color 1`] = `
<div
  className="container"
  style={undefined}
>
  <div
    className="spinner"
  >
    <div
      className="bounce2"
      style={
        Object {
          "backgroundColor": "#c1c1c1",
        }
      }
    />
    <div
      className="bounce3"
      style={
        Object {
          "backgroundColor": "#c1c1c1",
        }
      }
    />
    <div
      className="bounce1"
      style={
        Object {
          "backgroundColor": "#c1c1c1",
        }
      }
    />
  </div>
</div>
`;
